fixed vert scroll and banner font spacing

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -65,18 +65,19 @@ hr.divider {
 /* banner and menu */
 .banner {
 	width:100%;
-	height:72px;
+	height:10%;
 	background: -moz-linear-gradient(left,  rgba(68,68,68,1) 0%, rgba(68,68,68,1) 25%, rgba(110,110,110,1) 42%, rgba(180,180,180,0.84) 70%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
 	background: -webkit-linear-gradient(left,  rgba(68,68,68,1) 0%,rgba(68,68,68,1) 25%,rgba(110,110,110,1) 42%,rgba(180,180,180,0.84) 70%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
 	background: linear-gradient(to right,  rgba(68,68,68,1) 0%,rgba(68,68,68,1) 25%,rgba(110,110,110,1) 42%,rgba(180,180,180,0.84) 70%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#444444', endColorstr='#00ffffff',GradientType=1 ); /* IE6-9 */
 }
 .banner h1 {
-	margin:10px 10px;
+	margin:10px;
 	width:70%;
 	display:inline-block;
 	vertical-align:top;
 	letter-spacing:2px;
+	font-size:7vh;
 }
 .banner h1 b {
 	color:#000;
@@ -106,7 +107,7 @@ hr.divider {
 
 /* content and drawer */
 .content {
-	height:100%;
+	height:90%;
 	/* flex-box */
 	display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
 	display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
@@ -180,6 +181,9 @@ hr.divider {
 
 /* mobile */
 @media all and (max-width:640px) {
+	.banner h1 {
+		margin:5px 5%;
+	}
 	.menu {
 		width:30%;
 		position:relative;
